sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:7: error: not found: value echanges
        echanges=true
        ^